bb-node-red-installer (3.0.2.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-node-red-installer-debian-11/suite/bullseye/debian/rules
+++ b/bb-node-red-installer-debian-11/suite/bullseye/debian/rules
@@ -19,6 +19,7 @@ nodejs_version=v14.20.0
 
 node_red_version=3.0.2
 node_red_dashboard_version=3.1.7
+node_red_node_serialport_version=1.0.1
 
 node_red_contrib_gpio=0.51.0
 johnny_five_version=2.1.0
@@ -62,6 +63,14 @@ override_dh_auto_configure:
 	echo "Real Install: node-red-dashboard@$(node_red_dashboard_version)"
 	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/node-red-dashboard/*.tgz --unsafe-perm=true --loglevel=error --prefix $(project_dir) --no-save
 	rm -rf $(tmp_dir)/node-red-dashboard/
+	echo "*************************************************************"
+	echo "node-red-node-serialport"
+	echo "Fake Install: node-red-node-serialport@$(node_red_node_serialport_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g --unsafe-perm=true --loglevel=error --prefix /tmp node-red-node-serialport@$(node_red_node_serialport_version)
+	cd $(tmp_dir)/node-red-node-serialport/ ; TERM=dumb $(node_bin) $(npm_bin) pack
+	echo "Real Install: node-red-node-serialport@$(node_red_node_serialport_version)"
+	TERM=dumb $(node_bin) $(npm_bin) install -g $(tmp_dir)/node-red-node-serialport/*.tgz --unsafe-perm=true --loglevel=error --prefix $(project_dir) --no-save
+	rm -rf $(tmp_dir)/node-red-node-serialport/
 	echo "*************************************************************"
 	echo "node-red-contrib-gpio"
 	echo "Fake Install: node-red-contrib-gpio@$(node_red_contrib_gpio_version)"
