bbb.io-kernel (1.20220812.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/control
+++ b/bbb.io-kernel/suite/focal/debian/control
@@ -284,11 +284,47 @@ Recommends:
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
 
+Package: bbb.io-kernel-5.10-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.131-bone-rt-r64,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.131-bone-rt-r64
+Description: BeagleBoard.org 5.10-bone-rt for am335x
+ This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.49-bone-rt-r26,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.49-bone-rt-r26
+Description: BeagleBoard.org 5.15-bone-rt for am335x
+ This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.131-bone64,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.131-bone64
+Description: BeagleBoard.org 5.10-bone for am335x
+ This metapackage will install linux-image-5.10-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.49-bone26,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.49-bone26
+Description: BeagleBoard.org 5.15-bone for am335x
+ This metapackage will install linux-image-5.15-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.19.0-rc8-bone5,
+Pre-Depends: linux-image-5.19.0-bone6,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.0-rc8-bone5
+Recommends: libpruio-modules-5.19.0-bone6
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
