--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -359,9 +359,9 @@ Description: BeagleBoard.org 5.18-bone for am335x
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.19.0-rc8-bone5,
+Pre-Depends: linux-image-5.19.0-bone6,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.0-rc8-bone5
+Recommends: libpruio-modules-5.19.0-bone6
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
 
