--- a/bela-customizations/suite/bullseye/debian/control
+++ b/bela-customizations/suite/bullseye/debian/control
@@ -1,16 +1,16 @@
 Source: bela-customizations
-Section: unknown
-Priority: optional
+Section: misc
+Priority: extra
 Maintainer: prashanth <krvprashanth@risrup.net>
-Build-Depends: debhelper-compat (= 13)
+Build-Depends:
+ debhelper-compat (= 13)
 Standards-Version: 4.5.1
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Browser: https://salsa.debian.org/debian/bela-customizations
-#Vcs-Git: https://salsa.debian.org/debian/bela-customizations.git
 Rules-Requires-Root: no
 
 Package: bela-customizations
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Architecture: armhf
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+Description: bela customizations
+ bela customizations
