--- a/bela-customizations/suite/bullseye/debian/control
+++ b/bela-customizations/suite/bullseye/debian/control
@@ -9,6 +9,9 @@ Rules-Requires-Root: no
 
 Package: bela-customizations
 Architecture: armhf
+Pre-Depends:
+ bb-usb-gadgets
+ , bb-u-boot-am335x-evm
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
