--- a/bbb.io-kernel/suite/jammy/debian/control
+++ b/bbb.io-kernel/suite/jammy/debian/control
@@ -108,11 +108,47 @@ Recommends:
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
 
+Package: bbb.io-kernel-5.10-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.131-bone-rt-r64,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.131-bone-rt-r64
+Description: BeagleBoard.org 5.10-bone-rt for am335x
+ This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.55-bone-rt-r27,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.55-bone-rt-r27
+Description: BeagleBoard.org 5.15-bone-rt for am335x
+ This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.131-bone65,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.131-bone65
+Description: BeagleBoard.org 5.10-bone for am335x
+ This metapackage will install linux-image-5.10-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.55-bone27,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.55-bone27
+Description: BeagleBoard.org 5.15-bone for am335x
+ This metapackage will install linux-image-5.15-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.19.3-bone7,
+Pre-Depends: linux-image-5.19.5-bone8,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.3-bone7
+Recommends: libpruio-modules-5.19.5-bone8
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
