--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -340,18 +340,18 @@ Description: BeagleBoard.org 4.19-bone for am335x
 Package: bbb.io-kernel-5.4-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.4.182-bone64,
+Pre-Depends: linux-image-5.4.209-bone65,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-bone64
+Recommends: libpruio-modules-5.4.209-bone65
 Description: BeagleBoard.org 5.4-bone for am335x
  This metapackage will install linux-image-5.4-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.131-bone65,
+Pre-Depends: linux-image-5.10.140-bone66,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-bone65
+Recommends: libpruio-modules-5.10.140-bone66
 Description: BeagleBoard.org 5.10-bone for am335x
  This metapackage will install linux-image-5.10-bone for am335x in Debian.
 
@@ -367,9 +367,9 @@ Description: BeagleBoard.org 5.14-bone for am335x
 Package: bbb.io-kernel-5.15-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.55-bone27,
+Pre-Depends: linux-image-5.15.65-bone28,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.55-bone27
+Recommends: libpruio-modules-5.15.65-bone28
 Description: BeagleBoard.org 5.15-bone for am335x
  This metapackage will install linux-image-5.15-bone for am335x in Debian.
 
@@ -403,11 +403,20 @@ Description: BeagleBoard.org 5.18-bone for am335x
 Package: bbb.io-kernel-5.19-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.19.5-bone8,
+Pre-Depends: linux-image-5.19.8-bone9,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.19.5-bone8
+Recommends: libpruio-modules-5.19.8-bone9
 Description: BeagleBoard.org 5.19-bone for am335x
  This metapackage will install linux-image-5.19-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.0-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.0.0-rc5-bone3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.0.0-rc5-bone3
+Description: BeagleBoard.org 6.0-bone for am335x
+ This metapackage will install linux-image-6.0-bone for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
@@ -421,27 +430,27 @@ Description: BeagleBoard.org 4.19-bone-rt for am335x
 Package: bbb.io-kernel-5.4-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.4.182-bone-rt-r64,
+Pre-Depends: linux-image-5.4.209-bone-rt-r65,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-bone-rt-r64
+Recommends: libpruio-modules-5.4.209-bone-rt-r65
 Description: BeagleBoard.org 5.4-bone-rt for am335x
  This metapackage will install linux-image-5.4-bone-rt for am335x in Debian.
 
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.131-bone-rt-r65,
+Pre-Depends: linux-image-5.10.140-bone-rt-r66,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-bone-rt-r65
+Recommends: libpruio-modules-5.10.140-bone-rt-r66
 Description: BeagleBoard.org 5.10-bone-rt for am335x
  This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
 
 Package: bbb.io-kernel-5.15-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.55-bone-rt-r27,
+Pre-Depends: linux-image-5.15.65-bone-rt-r28,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.55-bone-rt-r27
+Recommends: libpruio-modules-5.15.65-bone-rt-r28
 Description: BeagleBoard.org 5.15-bone-rt for am335x
  This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
 
@@ -457,27 +466,27 @@ Description: BeagleBoard.org 4.19-armv7 for armv7
 Package: bbb.io-kernel-5.4-armv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.4.182-armv7-x64,
+Pre-Depends: linux-image-5.4.209-armv7-x65,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-armv7-x64
+Recommends: libpruio-modules-5.4.209-armv7-x65
 Description: BeagleBoard.org 5.4-armv7 for armv7
  This metapackage will install linux-image-5.4-armv7 for armv7 in Debian.
 
 Package: bbb.io-kernel-5.10-armv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.131-armv7-x65,
+Pre-Depends: linux-image-5.10.140-armv7-x66,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-armv7-x65
+Recommends: libpruio-modules-5.10.140-armv7-x66
 Description: BeagleBoard.org 5.10-armv7 for armv7
  This metapackage will install linux-image-5.10-armv7 for armv7 in Debian.
 
 Package: bbb.io-kernel-5.15-armv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.55-armv7-x27,
+Pre-Depends: linux-image-5.15.65-armv7-x28,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.55-armv7-x27
+Recommends: libpruio-modules-5.15.65-armv7-x28
 Description: BeagleBoard.org 5.15-armv7 for armv7
  This metapackage will install linux-image-5.15-armv7 for armv7 in Debian.
 
@@ -493,27 +502,27 @@ Description: BeagleBoard.org 4.19-armv7-rt for armv7
 Package: bbb.io-kernel-5.4-armv7-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.4.182-armv7-rt-x64,
+Pre-Depends: linux-image-5.4.209-armv7-rt-x65,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-armv7-rt-x64
+Recommends: libpruio-modules-5.4.209-armv7-rt-x65
 Description: BeagleBoard.org 5.4-armv7-rt for armv7
  This metapackage will install linux-image-5.4-armv7-rt for armv7 in Debian.
 
 Package: bbb.io-kernel-5.10-armv7-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.131-armv7-rt-x65,
+Pre-Depends: linux-image-5.10.140-armv7-rt-x66,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-armv7-rt-x65
+Recommends: libpruio-modules-5.10.140-armv7-rt-x66
 Description: BeagleBoard.org 5.10-armv7-rt for armv7
  This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
 
 Package: bbb.io-kernel-5.15-armv7-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.55-armv7-rt-x27,
+Pre-Depends: linux-image-5.15.65-armv7-rt-x28,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.55-armv7-rt-x27
+Recommends: libpruio-modules-5.15.65-armv7-rt-x28
 Description: BeagleBoard.org 5.15-armv7-rt for armv7
  This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
 
@@ -529,26 +538,26 @@ Description: BeagleBoard.org 4.19-armv7-lpae for armv7-lpae
 Package: bbb.io-kernel-5.4-armv7-lpae
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.4.182-armv7-lpae-x64,
+Pre-Depends: linux-image-5.4.209-armv7-lpae-x65,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.4.182-armv7-lpae-x64
+Recommends: libpruio-modules-5.4.209-armv7-lpae-x65
 Description: BeagleBoard.org 5.4-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.4-armv7-lpae for armv7-lpae in Debian.
 
 Package: bbb.io-kernel-5.10-armv7-lpae
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.131-armv7-lpae-x65,
+Pre-Depends: linux-image-5.10.140-armv7-lpae-x66,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-armv7-lpae-x65
+Recommends: libpruio-modules-5.10.140-armv7-lpae-x66
 Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.10-armv7-lpae for armv7-lpae in Debian.
 
 Package: bbb.io-kernel-5.15-armv7-lpae
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.15.55-armv7-lpae-x27,
+Pre-Depends: linux-image-5.15.65-armv7-lpae-x28,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.15.55-armv7-lpae-x27
+Recommends: libpruio-modules-5.15.65-armv7-lpae-x28
 Description: BeagleBoard.org 5.15-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.15-armv7-lpae for armv7-lpae in Debian.
