rcnee-internal-testlab (1.20220920.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bullseye/debian/control
+++ b/rcnee-internal-testlab/suite/bullseye/debian/control
@@ -10,7 +10,10 @@ Rules-Requires-Root: no
 Package: rcnee-internal-testlab
 Architecture: armhf
 Depends:
- cockpit-system
+ cockpit-packagekit
+ , cockpit-system
  , cockpit-ws
+ , gpiod
+ , wireguard-tools
 Description: rcnee-internal-testlab
  rcnee-internal-testlab
