rcnee-internal-testlab (1.20220920.3)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bullseye/debian/control
+++ b/rcnee-internal-testlab/suite/bullseye/debian/control
@@ -14,6 +14,7 @@ Depends:
  , cockpit-system
  , cockpit-ws
  , gpiod
+ , lsb-release
  , pastebinit
  , wireguard-tools
 Description: rcnee-internal-testlab
