--- a/rcnee-internal-testlab/suite/buster/debian/control
+++ b/rcnee-internal-testlab/suite/buster/debian/control
@@ -14,6 +14,7 @@ Depends:
  , cockpit-system
  , cockpit-ws
  , gpiod
+ , lsb-release
  , pastebinit
  , wireguard-tools
 Description: rcnee-internal-testlab
