rcnee-internal-testlab (1.20220926.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bullseye/debian/control
+++ b/rcnee-internal-testlab/suite/bullseye/debian/control
@@ -10,12 +10,14 @@ Rules-Requires-Root: no
 Package: rcnee-internal-testlab
 Architecture: armhf
 Depends:
- cockpit-packagekit
+ bsdextrautils
+ , cockpit-packagekit
  , cockpit-system
  , cockpit-ws
  , gpiod
  , lsb-release
  , pastebinit
+ , tree
  , wireguard-tools
 Description: rcnee-internal-testlab
  rcnee-internal-testlab
