--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -240,11 +240,11 @@ Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.131-ti-r50
+ linux-image-5.10.131-ti-r51
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-ti-r50
+Recommends: libpruio-modules-5.10.131-ti-r51
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
@@ -252,17 +252,17 @@ Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.131-ti-r50
+ linux-image-5.10.131-ti-r51
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.131-ti-r50
- , ti-sgx-ti335x-modules-5.10.131-ti-r50
- , rtl8723bu-modules-5.10.131-ti-r50
- , rtl8723du-modules-5.10.131-ti-r50
- , rtl8821cu-modules-5.10.131-ti-r50
- , qcacld-2.0-modules-5.10.131-ti-r50
+ libpruio-modules-5.10.131-ti-r51
+ , ti-sgx-ti335x-modules-5.10.131-ti-r51
+ , rtl8723bu-modules-5.10.131-ti-r51
+ , rtl8723du-modules-5.10.131-ti-r51
+ , rtl8821cu-modules-5.10.131-ti-r51
+ , qcacld-2.0-modules-5.10.131-ti-r51
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -271,13 +271,13 @@ Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.131-ti-r50
+ linux-image-5.10.131-ti-r51
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.131-ti-r50
- , ti-sgx-jacinto6evm-modules-5.10.131-ti-r50
+ libpruio-modules-5.10.131-ti-r51
+ , ti-sgx-jacinto6evm-modules-5.10.131-ti-r51
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
@@ -286,11 +286,11 @@ Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.131-ti-rt-r50
+ linux-image-5.10.131-ti-rt-r51
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.131-ti-rt-r50
+Recommends: libpruio-modules-5.10.131-ti-rt-r51
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
 
@@ -298,17 +298,17 @@ Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.131-ti-rt-r50
+ linux-image-5.10.131-ti-rt-r51
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.131-ti-rt-r50
- , ti-sgx-ti335x-modules-5.10.131-ti-rt-r50
- , rtl8723bu-modules-5.10.131-ti-rt-r50
- , rtl8723du-modules-5.10.131-ti-rt-r50
- , rtl8821cu-modules-5.10.131-ti-rt-r50
- , qcacld-2.0-modules-5.10.131-ti-rt-r50
+ libpruio-modules-5.10.131-ti-rt-r51
+ , ti-sgx-ti335x-modules-5.10.131-ti-rt-r51
+ , rtl8723bu-modules-5.10.131-ti-rt-r51
+ , rtl8723du-modules-5.10.131-ti-rt-r51
+ , rtl8821cu-modules-5.10.131-ti-rt-r51
+ , qcacld-2.0-modules-5.10.131-ti-rt-r51
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
@@ -317,13 +317,13 @@ Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.131-ti-rt-r50
+ linux-image-5.10.131-ti-rt-r51
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.131-ti-rt-r50
- , ti-sgx-jacinto6evm-modules-5.10.131-ti-rt-r50
+ libpruio-modules-5.10.131-ti-rt-r51
+ , ti-sgx-jacinto6evm-modules-5.10.131-ti-rt-r51
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
@@ -412,9 +412,9 @@ Description: BeagleBoard.org 5.19-bone for am335x
 Package: bbb.io-kernel-6.0-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.0.0-rc5-bone3,
+Pre-Depends: linux-image-6.0.0-bone4,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.0.0-rc5-bone3
+Recommends: libpruio-modules-6.0.0-bone4
 Description: BeagleBoard.org 6.0-bone for am335x
  This metapackage will install linux-image-6.0-bone for am335x in Debian.
 
