bbb.io-kernel (1.20221107.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -240,11 +240,11 @@ Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.140-ti-r52
+ linux-image-5.10.145-ti-r53
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.140-ti-r52
+Recommends: libpruio-modules-5.10.145-ti-r53
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
@@ -252,17 +252,17 @@ Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.140-ti-r52
+ linux-image-5.10.145-ti-r53
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.140-ti-r52
- , ti-sgx-ti335x-modules-5.10.140-ti-r52
- , rtl8723bu-modules-5.10.140-ti-r52
- , rtl8723du-modules-5.10.140-ti-r52
- , rtl8821cu-modules-5.10.140-ti-r52
- , qcacld-2.0-modules-5.10.140-ti-r52
+ libpruio-modules-5.10.145-ti-r53
+ , ti-sgx-ti335x-modules-5.10.145-ti-r53
+ , rtl8723bu-modules-5.10.145-ti-r53
+ , rtl8723du-modules-5.10.145-ti-r53
+ , rtl8821cu-modules-5.10.145-ti-r53
+ , qcacld-2.0-modules-5.10.145-ti-r53
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -271,13 +271,13 @@ Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.140-ti-r52
+ linux-image-5.10.145-ti-r53
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.140-ti-r52
- , ti-sgx-jacinto6evm-modules-5.10.140-ti-r52
+ libpruio-modules-5.10.145-ti-r53
+ , ti-sgx-jacinto6evm-modules-5.10.145-ti-r53
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
@@ -286,11 +286,11 @@ Package: bbb.io-kernel-5.10-ti-rt
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.140-ti-rt-r52
+ linux-image-5.10.145-ti-rt-r53
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.140-ti-rt-r52
+Recommends: libpruio-modules-5.10.145-ti-rt-r53
 Description: BeagleBoard.org 5.10-ti-rt
  This metapackage will install linux-image-5.10-ti-rt in Debian.
 
@@ -298,17 +298,17 @@ Package: bbb.io-kernel-5.10-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.140-ti-rt-r52
+ linux-image-5.10.145-ti-rt-r53
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.140-ti-rt-r52
- , ti-sgx-ti335x-modules-5.10.140-ti-rt-r52
- , rtl8723bu-modules-5.10.140-ti-rt-r52
- , rtl8723du-modules-5.10.140-ti-rt-r52
- , rtl8821cu-modules-5.10.140-ti-rt-r52
- , qcacld-2.0-modules-5.10.140-ti-rt-r52
+ libpruio-modules-5.10.145-ti-rt-r53
+ , ti-sgx-ti335x-modules-5.10.145-ti-rt-r53
+ , rtl8723bu-modules-5.10.145-ti-rt-r53
+ , rtl8723du-modules-5.10.145-ti-rt-r53
+ , rtl8821cu-modules-5.10.145-ti-rt-r53
+ , qcacld-2.0-modules-5.10.145-ti-rt-r53
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti-rt for am335x
  This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
@@ -317,13 +317,13 @@ Package: bbb.io-kernel-5.10-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
 Pre-Depends:
- linux-image-5.10.140-ti-rt-r52
+ linux-image-5.10.145-ti-rt-r53
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.140-ti-rt-r52
- , ti-sgx-jacinto6evm-modules-5.10.140-ti-rt-r52
+ libpruio-modules-5.10.145-ti-rt-r53
+ , ti-sgx-jacinto6evm-modules-5.10.145-ti-rt-r53
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti-rt for am57xx
  This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
@@ -417,6 +417,15 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.0.5-bone7
 Description: BeagleBoard.org 6.0-bone for am335x
  This metapackage will install linux-image-6.0-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.0-rc3-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.0-rc3-bone1
+Description: BeagleBoard.org 6.1-bone for am335x
+ This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-bone-rt
 Section: metapackages
