--- a/bb-code-server/suite/buster/debian/bb-code-server.bb-code-server.service
+++ b/bb-code-server/suite/buster/debian/bb-code-server.bb-code-server.service
@@ -1,8 +1,7 @@
 [Unit]
 Description=BeagleBoard.org Code Server
-Documentation=https://github.com/coder/code-server/tree/main/docs
 Wants=network.target dphys-swapfile.service
-After=multi-user.target
+After=network.target
 
 [Service]
 Type=exec
@@ -16,4 +15,4 @@ Restart=always
 RestartSec=15
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
