Revert "linuxcnc (2.9.0~pre0+git20221105.ffb6bda926-1.2bbbio1)"
This reverts commit 5f546df4fa8b0ff352f7c58097010cea51c9b831.

Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/debian-11-linuxcnc/suite/bullseye/debian/rules
+++ b/debian-11-linuxcnc/suite/bullseye/debian/rules
@@ -30,7 +30,7 @@ export TIME=$(shell LANG=C date --date='@$(TIMESTAMP)' '+%T')
 
 kernel_version = uspace
 configure_realtime_arg = --with-realtime=uspace
-enable_build_documentation =
+enable_build_documentation = --enable-build-documentation=pdf
 DESTDIR=$(CURDIR)/debian/tmp
 DEV_PACKAGE_NAME=linuxcnc-uspace-dev
 
