--- a/bb-wl18xx-firmware/suite/bullseye/debian/control
+++ b/bb-wl18xx-firmware/suite/bullseye/debian/control
@@ -14,6 +14,7 @@ Depends: ${shlibs:Depends}
  , bsdmainutils
  , coreutils
  , firmware-ti-connectivity
+ , whiptail
 Description: beagleboard.org wl18xx firmware
  wl18xx bluetooth firmware
 
