--- a/bb-beagle-version/suite/focal/debian/control
+++ b/bb-beagle-version/suite/focal/debian/control
@@ -8,6 +8,11 @@ Standards-Version: 4.5.1
 
 Package: bb-beagle-version
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+ , binutils
+ , usbutils
+ , xxd
 Description: beagleboard.org beagle-version
  beagleboard.org beagle-version
