bb-wl18xx-firmware (1.20221130.4)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wl18xx-firmware/suite/bullseye/debian/control
+++ b/bb-wl18xx-firmware/suite/bullseye/debian/control
@@ -12,6 +12,7 @@ Depends: ${shlibs:Depends}
  , bb-usb-gadgets
  , bc
  , bsdmainutils
+ , bluez
  , coreutils
  , firmware-ti-connectivity
  , whiptail
