--- a/bb-wl18xx-firmware/suite/buster/debian/control
+++ b/bb-wl18xx-firmware/suite/buster/debian/control
@@ -12,6 +12,7 @@ Depends: ${shlibs:Depends}
  , bb-usb-gadgets
  , bc
  , bsdmainutils
+ , bluez
  , coreutils
  , firmware-ti-connectivity
  , whiptail
