bb-code-server (4.9.0.0-0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/bullseye/debian/user/code-server.service
+++ b/bb-code-server/suite/bullseye/debian/user/code-server.service
@@ -1,10 +1,11 @@
 [Unit]
 Description=code-server
+Wants=network.target dphys-swapfile.service
 After=network.target
 
 [Service]
 Type=exec
-ExecStart=/opt/bb-code-server/app/bin/code-server
+ExecStart=/opt/bb-code-server/app/bin/code-server --disable-telemetry --disable-update-check
 Restart=always
 
 [Install]
