rcnee-internal-testlab (1.20221220.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-beagleconnect/suite/bullseye/debian/control
+++ b/bbb.io-beagleconnect/suite/bullseye/debian/control
@@ -15,6 +15,11 @@ Standards-Version: 4.5.1
 
 Package: beagleconnect
 Architecture: armhf
-Depends: ${shlibs:Depends}, ${misc:Depends}, systemd (>= 230), python3-serial, wpan-tools
+Depends:
+ ${shlibs:Depends}
+ , ${misc:Depends}
+ , systemd (>= 230)
+ , python3-serial
+ , wpan-tools
 Description: beagleboard.org beagleconnect
  beagleboard.org beagleconnect
