rcnee-internal-testlab (1.20230224.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bullseye/debian/control
+++ b/rcnee-internal-testlab/suite/bullseye/debian/control
@@ -15,9 +15,10 @@ Depends:
  , cockpit-system
  , cockpit-ws
  , gpiod
+ , lsb-release
  , nfs-common
  , ncdu
- , lsb-release
+ , openjdk-11-jre-headless
  , pastebinit
  , tree
  , wireguard-tools
