bbb.io-kernel (1.20230227.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -421,9 +421,9 @@ Description: BeagleBoard.org 6.0-bone for am335x
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.9-bone14,
+Pre-Depends: linux-image-6.1.12-bone15,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.9-bone14
+Recommends: libpruio-modules-6.1.12-bone15
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
@@ -462,6 +462,15 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.86-bone-rt-r33
 Description: BeagleBoard.org 5.15-bone-rt for am335x
  This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.12-bone-rt-r15,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.12-bone-rt-r15
+Description: BeagleBoard.org 6.1-bone-rt for am335x
+ This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
 
 Package: bbb.io-kernel-4.19-armv7
 Section: metapackages
