bbb.io-kernel (1.20230627.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -16,6 +16,94 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
+Package: bbb.io-kernel-4.19-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-4.19.94-ti-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-4.19.94-ti-r74
+Description: BeagleBoard.org 4.19-ti
+ This metapackage will install linux-image-4.19-ti in Debian.
+
+Package: bbb.io-kernel-4.19-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-4.19.94-ti-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-r74
+ , ti-sgx-ti335x-modules-4.19.94-ti-r74
+ , rtl8723bu-modules-4.19.94-ti-r74
+ , rtl8821cu-modules-4.19.94-ti-r74
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 4.19-ti for am335x
+ This metapackage will install linux-image-4.19-ti for am335x in Debian.
+
+Package: bbb.io-kernel-4.19-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-4.19.94-ti-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-r74
+ , ti-sgx-jacinto6evm-modules-4.19.94-ti-r74
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 4.19-ti for am57xx
+ This metapackage will install linux-image-4.19-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-4.19-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-4.19.94-ti-rt-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-4.19.94-ti-rt-r74
+Description: BeagleBoard.org 4.19-ti-rt
+ This metapackage will install linux-image-4.19-ti-rt in Debian.
+
+Package: bbb.io-kernel-4.19-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-4.19.94-ti-rt-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-rt-r74
+ , ti-sgx-ti335x-modules-4.19.94-ti-rt-r74
+ , rtl8723bu-modules-4.19.94-ti-rt-r74
+ , rtl8821cu-modules-4.19.94-ti-rt-r74
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 4.19-ti-rt for am335x
+ This metapackage will install linux-image-4.19-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-4.19-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-4.19.94-ti-rt-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-4.19.94-ti-rt-r74
+ , ti-sgx-jacinto6evm-modules-4.19.94-ti-rt-r74
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 4.19-ti-rt for am57xx
+ This metapackage will install linux-image-4.19-ti-rt for am57xx in Debian.
+
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
