--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -16,6 +16,33 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
+Package: bbb.io-kernel-5.10-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.184-bone73,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.184-bone73
+Description: BeagleBoard.org 5.10-bone for am335x
+ This metapackage will install linux-image-5.10-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.118-bone37,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.118-bone37
+Description: BeagleBoard.org 5.15-bone for am335x
+ This metapackage will install linux-image-5.15-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.35-bone20,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.35-bone20
+Description: BeagleBoard.org 6.1-bone for am335x
+ This metapackage will install linux-image-6.1-bone for am335x in Debian.
+
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
 Architecture: armhf
