bbb.io-kernel (1.20230628.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -16,6 +16,180 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
+Package: bbb.io-kernel-5.10-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-5.10.168-ti-r63
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.168-ti-r63
+Description: BeagleBoard.org 5.10-ti
+ This metapackage will install linux-image-5.10-ti in Debian.
+
+Package: bbb.io-kernel-5.10-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-5.10.168-ti-r63
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-r63
+ , ti-sgx-ti335x-modules-5.10.168-ti-r63
+ , rtl8723bu-modules-5.10.168-ti-r63
+ , rtl8723du-modules-5.10.168-ti-r63
+ , rtl8821cu-modules-5.10.168-ti-r63
+ , qcacld-2.0-modules-5.10.168-ti-r63
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 5.10-ti for am335x
+ This metapackage will install linux-image-5.10-ti for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-5.10.168-ti-r63
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-r63
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-r63
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 5.10-ti for am57xx
+ This metapackage will install linux-image-5.10-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-5.10-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-5.10.168-ti-rt-r63
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.168-ti-rt-r63
+Description: BeagleBoard.org 5.10-ti-rt
+ This metapackage will install linux-image-5.10-ti-rt in Debian.
+
+Package: bbb.io-kernel-5.10-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-5.10.168-ti-rt-r63
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-rt-r63
+ , ti-sgx-ti335x-modules-5.10.168-ti-rt-r63
+ , rtl8723bu-modules-5.10.168-ti-rt-r63
+ , rtl8723du-modules-5.10.168-ti-rt-r63
+ , rtl8821cu-modules-5.10.168-ti-rt-r63
+ , qcacld-2.0-modules-5.10.168-ti-rt-r63
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 5.10-ti-rt for am335x
+ This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-5.10.168-ti-rt-r63
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-rt-r63
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-rt-r63
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 5.10-ti-rt for am57xx
+ This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.26-ti-r5
+Description: BeagleBoard.org 6.1-ti
+ This metapackage will install linux-image-6.1-ti in Debian.
+
+Package: bbb.io-kernel-6.1-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.26-ti-r5
+ , rtl8723du-modules-6.1.26-ti-r5
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.1-ti for am335x
+ This metapackage will install linux-image-6.1-ti for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.26-ti-r5
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.1-ti for am57xx
+ This metapackage will install linux-image-6.1-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-rt-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.26-ti-rt-r5
+Description: BeagleBoard.org 6.1-ti-rt
+ This metapackage will install linux-image-6.1-ti-rt in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-rt-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.26-ti-rt-r5
+ , rtl8723du-modules-6.1.26-ti-rt-r5
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.1-ti-rt for am335x
+ This metapackage will install linux-image-6.1-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends:
+ linux-image-6.1.26-ti-rt-r5
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.26-ti-rt-r5
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.1-ti-rt for am57xx
+ This metapackage will install linux-image-6.1-ti-rt for am57xx in Debian.
+
 Package: bbb.io-kernel-5.10-bone
 Section: metapackages
 Architecture: armhf
